plugins/elements/gstinputselector.h
@@ -83,8 +83,6 @@ struct _GstInputSelector {
 
 struct _GstInputSelectorClass {
   GstElementClass parent_class;
-
-  gint64 (*block)	(GstInputSelector *self);
 };
 
 G_GNUC_INTERNAL GType gst_input_selector_get_type (void);
